Front-End : Fixed A Small Issue Where The Style That Should Apply Only For The Admin Side Ended Up Applying For Every Form In The Platform By Wrapping The Admin Components Inside Their Own Div

--- a/Front-End/src/pages/Styles/MonitoringPage.css
+++ b/Front-End/src/pages/Styles/MonitoringPage.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
 }
-.containerBox {
+.MonitoringParent .containerBox, .CrudParent .containerBox {
     display: flex;
     flex-direction: row;
     width: 100%;
